--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "md5": "^2.3.0",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-easy-crop": "^5.5.6",
+    "react-quill-new": "^3.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
