--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.23.26",
     "md5": "^2.3.0",
     "next": "16.0.10",
     "react": "19.2.1",
